Readme content added.

--- a/EchoSeven/Rakefile
+++ b/EchoSeven/Rakefile
@@ -11,7 +11,7 @@ task :clean do
 
 end
 
-desc "Install release"
+desc "Install release, run with sudo"
 
 task :install do
     sh "mkdir -p /opt/EchoSeven"
@@ -21,7 +21,7 @@ task :install do
     sh "systemctl daemon-reload"
 end
 
-desc "Remove release"
+desc "Remove release, run with sudo"
 
 task :remove do
     sh "systemctl stop EchoSeven"
