support configuration from /etc/EchoSeven/appsettings.json

--- a/EchoSeven/appsettings.Development.json
+++ b/EchoSeven/appsettings.Development.json
@@ -1,14 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     },
     "EchoService": {
       "Port": "7777",
       "IPAddress": "0.0.0.0",
-      "User": "echoseven"
+      "User": "echoseven",
+      "Source": "./appsettings.Development.json"
     }
   }
 }
