--- a/EchoSeven/appsettings.json
+++ b/EchoSeven/appsettings.json
@@ -9,6 +9,7 @@
   "EchoService": {
     "Port": "7",
     "IPAddress": "0.0.0.0",
-    "User": "echoseven"
+    "User": "echoseven",
+    "Source": "./appsettings.json"
   }
 }
